@@ -17,5 +17,6 @@ Source: "..\bin\mfc70.dll"; DestDir: {#MagickLibDirectory}; Flags: ignoreversion
 Source: "..\bin\CORE_RL*.dll"; DestDir: {#MagickLibDirectory}; Flags: ignoreversion
 Source: "..\bin\IM_MOD_RL*.dll"; DestDir: {#MagickCodersDirectory}; Flags: ignoreversion
 Source: "..\bin\analyze.dll"; DestDir: {#MagickFiltersDirectory}; Flags: ignoreversion
-Source: "..\bin\X11.dll"; DestDir: {#MagickLibDirectory}; Flags: ignoreversion
-Source: "..\bin\Xext.dll"; DestDir: {#MagickLibDirectory}; Flags: ignoreversion
+; X11 is no longer included in the Windows installer from the GraphicsMagick Group.
+;; Source: "..\bin\X11.dll"; DestDir: {#MagickLibDirectory}; Flags: ignoreversion
+;; Source: "..\bin\Xext.dll"; DestDir: {#MagickLibDirectory}; Flags: ignoreversion
