@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2008-04-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> VisualMagick/installer/inc/files-dlls.isx: Comment out inclusion
+        of X11 support DLLs.<BR>
+  <LI> VisualMagick/magick/magick_config.h.in: X11 is no longer in the
+        default Windows build.
+
+</UL>
+<p>
 2008-04-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
